# geode.dev

./: .gitignore  Cargo.toml  README.md
geode-cli/: Cargo.toml
geode-cli/src/: main.rs  repl.rs
geode-cli/src/commands/: config.rs  mod.rs  model.rs
geode-core/: Cargo.toml
geode-core/src/: agent.rs  config.rs  context.rs  lib.rs  llm_client.rs  message.rs  model_registry.rs  planning.rs  summarizer.rs  tokenizer.rs  tool.rs  tool_registry.rs
geode-tools/: Cargo.toml
geode-tools/src/: fs.rs  lib.rs  shell.rs  web.rs
