[package]
name = "geode-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geode"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geode-core = { path = "../geode-core" }
geode-tools = { path = "../geode-tools" }
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures = "0.3"
indicatif = "0.17"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rustyline = "14"
