[package]
name = "geode-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
