[package]
name = "geode-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
geode-core = { path = "../geode-core" }
